--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"/>
-    <link rel="stylesheet" href="./dist/css/main.min.css"/>
+    <link rel="stylesheet" href="./css/main.min.css"
 </head>
 <body>
     <header class="header container">
@@ -41,8 +41,8 @@
  </header>
 
     <main>
-        <section class="hero section">
-            <div class="container">
+        <section class="hero section" style="background-image: url(/images/background.jpg)">
+            <div class="container" >
                 <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ<br> ВАШОГО БІЗНЕСУ</h1>
                 <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
             </div>
