--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
  </header>
 
     <main>
-        <section class="hero section" style="background-image: url(/images/background.jpg)">
+        <section class="hero section">
             <div class="container" >
                 <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ<br> ВАШОГО БІЗНЕСУ</h1>
                 <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
