--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="nav">   
         <a href="./index.html" class="color-logo">Web<span class="logo">Studio</span></a>
         <ul class="nav-menu list">
-            <li class="nav-menu__item"><a href="./index.html" class="nav-menu__link--current link">Студія</a></li>
+            <li class="nav-menu__item"><a href="./index.html" class="nav-menu__link nav-menu__link--current link">Студія</a></li>
             <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link link">Портфоліо</a></li>
             <li class="nav-menu__item"><a href="" class="nav-menu__link link">Контакти</a></li>
         </ul>
@@ -347,31 +347,31 @@
                 </address>
             </div>
             <div class="footer-nav join">
-                <p class="join-title feature-title">Приєднуйтесь</p>
+                <p class="join-title feature__title">Приєднуйтесь</p>
                 <ul class="social-sub list">
                     <li class="social-sub__item">
-                        <a href="" class="social-sub__link link">
+                        <a href="" class="social-sub__link">
                             <svg viewBox="0 0 100 100" width="20" height="20" class="social-sub__icon">
                                 <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-sub__item">
-                        <a href="" class="social-sub__link link">
+                        <a href="" class="social-sub__link">
                             <svg viewBox="0 0 100 100" width="20" height="20" class="social-sub__icon">>
                                 <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-sub__item">
-                        <a href="" class="social-sub__link link">
+                        <a href="" class="social-sub__link">
                             <svg viewBox="0 0 100 100" width="20" height="20" class="social-sub__icon">>
                                 <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-sub__item">
-                        <a href="" class="social-sub__link link">
+                        <a href="" class="social-sub__link">
                             <svg viewBox="0 0 100 100" width="20" height="20" class="social-sub__icon">
                                 <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
@@ -380,7 +380,7 @@
                 </ul>
             </div>
             <div class="mail-field">
-                <p class="join-title feature-title">Підпишіться на розсилку</p>
+                <p class="join-title feature__title">Підпишіться на розсилку</p>
                 <div class="mail-sub">
                     <input type="email" name="user-mail" class="mail-input" id="user-email" placeholder="E-mail">
                     <a href="" class="mail-sub__link link">Підписатися
