--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"/>
-    <link rel="stylesheet" href="./css/main.min.css"
+    <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body>
     <header class="header container">
