--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
-    <link rel="stylesheet" href="./css/main.min.css"/>
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <a href="./index.html" class="color-logo">Web<span class="logo">Studio</span></a>
             <ul class="nav-menu list">
                 <li class="nav-menu__item"><a href="./index.html" class="nav-menu__link link">Студія</a></li>
-                <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link--current link">Портфоліо</a></li>
+                <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link nav-menu__link--current link">Портфоліо</a></li>
                 <li class="nav-menu__item"><a href="" class="nav-menu__link link">Контакти</a></li>
             </ul>
             <ul class="contact-menu list">
